# flumine

./: .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  DESIGN.md  Dockerfile  HISTORY.rst  LICENSE  README.md  build.sh  flumine_settings.json  index.html  main.py  mainrace.py  mkdocs.yml  pyproject.toml  requirements-speed.txt  requirements-test.txt  requirements.txt  run.py  setup.py
.github/: dependabot.yml
.github/workflows/: deploy.yml  test.yml
advanced/: index.html
api/: __init__.py  config.py
api/resources/: __init__.py  recorder.py  settings.py  status.py  stream.py
architecture/: index.html
clients/: index.html
controls/: index.html
docs/: advanced.md  architecture.md  clients.md  controls.md  design.md  execution.md  index.md  known issues and limitations.md  known_issues.md  markets.md  performance.md  quickstart.md  sportsdata.md  strategies.md  trades.md  workers.md
examples/: backtest.py  example-betconnect.py  example-single.py  example-sportsdata.py  example.py  exampleone.py  football-epl.py  historical.py  marketrecorder.py  marketrecorder_zip.py  simulate-sportsdata.py  simulate.py  tennisexample.py
examples/controls/: analysis.ipynb  backtestloggingcontrol.py  jupyterloggingcontrol.py
examples/middleware/: marketcatalogue.py  orders.py
examples/middlewares/: marketcatalogue.py
examples/strategies/: lowestlayer.py  marketrecorder.py  marketrecorder_zip.py  priceblockage.py  pricerecorder.py
examples/workers/: inplayservice.py  terminate.py
flumine/: __init__.py  __version__.py  app.py  baseflumine.py  config.py  exceptions.py  flumine.py  listener.py  patching.py  utils.py  worker.py
flumine/api/: __init__.py  config.py  utils.py
flumine/backtest/: backtest.py  listener.py  simulated.py  utils.py
flumine/clients/: __init__.py  backtestclient.py  baseclient.py  betconnectclient.py  betdaqclient.py  betfairclient.py  clients.py  simulatedclient.py
flumine/controls/: __init__.py  clientcontrols.py  loggingcontrols.py  tradingcontrols.py
flumine/event/: event.py
flumine/events/: events.py
flumine/execution/: baseexecution.py  betdaqexecution.py  betfairexecution.py  simulatedexecution.py  transaction.py
flumine/markets/: blotter.py  market.py  markets.py  middleware.py
help/: index.html
known_issues/: index.html
markets/: index.html
performance/: index.html
quickstart/: index.html
search/: search_index.json
sportsdata/: index.html
strategies/: index.html
tests/: test_backtest_utils.py  test_baseflumine.py  test_baserecorder.py  test_basestrategy.py  test_blotter.py  test_clientcontrols.py  test_clients.py  test_config.py  test_event.py  test_events.py  test_execution.py  test_flumine.py  test_fluminebacktest.py  test_fluminesimulation.py  test_git  test_integration.py  test_listener.py  test_loggingcontrols.py  test_marketfilters.py  test_markets.py  test_middleware.py  test_order.py  test_orderpackage.py  test_ordertype.py  test_process.py  test_recorder.py  test_release.py  test_responses.py  test_runnercontext.py  test_simulated.py  test_simulated_utils.py  test_simulatedorder.py  test_storageengine.py  test_strategy.py  test_streams.py  test_trade.py  test_tradingcontrols.py  test_transaction.py  test_utils.py  test_worker.py
trades/: index.html
workers/: index.html
(+42 files in other folders)
